--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@supabase/supabase-js": "^2.79.0",
     "archiver": "^7.0.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "openai": "^6.8.0",
     "pdf-parse": "^2.4.5",
     "react": "19.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.1",
