--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "archiver": "^7.0.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "googleapis": "^164.1.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "openai": "^6.8.0",
@@ -47,6 +48,7 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "lucide-react": "^0.552.0",
